# DIIPI-TECBreakout

./: .gitignore  README.md
ClientBreakout/: CMakeLists.txt  main.cpp
ServerBreakout/: CMakeLists.txt  main.cpp
ServerBreakout/DataStructures/: LinkedList.h  Matrix.h  Node.h  SimpleList.h
ServerBreakout/DataStructures/Matrix/: Matrix.h  MatrixNode.h
ServerBreakout/Logic/: Ball.h  Bar.h  Block.h  GameManager.h  Player.h
ServerBreakout/Socket/: JsonManagement.h  SocketServer.cpp  SocketServer.h  TypeMessage.h
htmlClient/: _client_8h_source.html  _game_settings_window_8h_source.html  _game_window_8h_source.html  _json_management_8h_source.html  _menu_window_8h_source.html  _type_message_8h_source.html  annotated.html  annotated_dup.js  class_class.html  class_client-members.html  class_client.html  class_client.js  class_game_settings_window-members.html  class_game_settings_window.html  class_game_settings_window.js  class_game_window-members.html  class_game_window.html  class_game_window.js  class_j_s_o_n___management-members.html  class_j_s_o_n___management.html  class_keys.html  class_menu_window-members.html  class_menu_window.html  class_menu_window.js  class_translate.html  class_type_message-members.html  class_type_message.html  class_type_message.js  classes.html  dir_0f6b0ff2113fc60c7abb441f26a951a0.html  dir_2254ed4c86842eb07fcb8e0eac2ef2c8.html  dir_3c9f3ed66bc349525b536302ffbe5a4f.html  dir_917b423456edc1f7d09b8f6979f8704a.html  dir_917b423456edc1f7d09b8f6979f8704a.js  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_cb8aebdcbcd7898634ff25bad2892a2f.html  dir_e47e4de72e0320db55f81376ac4f26ec.html  dir_e47e4de72e0320db55f81376ac4f26ec.js  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  (+7 more)
htmlServer/: _ball_8h_source.html  _bar_8h_source.html  _block_8h_source.html  _game_manager_8h_source.html  _json_management_8h_source.html  _linked_list_8h_source.html  _matrix_8h_source.html  _matrix_node_8h_source.html  _node_8h_source.html  _player_8h_source.html  _socket_server_8h_source.html  _type_message_8h_source.html  annotated.html  annotated_dup.js  class_ball-members.html  (+63 more)
(+74 files in other folders)
